# smart-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env_config.yaml  pyproject.toml  setup.sh  styleguide.md
.devcontainer/: .bashrc  Dockerfile  setup_user.sh
notebooks/: core.ipynb
notebooks_test/: check_gemma_3.ipynb  core.ipynb
scenarios/python_development/documents/: 15_software_engineering_principles.docx
src/ai_circus/: main.py  models.py
src/ai_circus/assistants/: baisc_intent_detector_and_retriever.py  document_extractor.py  intent_detector_graph.py  prompts.yaml  retriever.py  sample_assistant.py
src/ai_circus/core/: info.py  logger.py
src/ai_circus/tools/: check_api_keys.py  generate_commits_messages.py  hello_world.py
src/smart_ai/: main.py
src/smart_ai/core/: info.py
